add mobile slider

--- a/index.html
+++ b/index.html
@@ -815,130 +815,143 @@
       </div>
       <h3 class="section-title">Стоимость продвижения сайта</h3>
       <div class="cost">
-        <!-- START cost-item-->
-        <div class="cost-item">
-          <div class="cost-plane cost-plane--standart">
-            <div class="cost-plane__head">
-              <div class="cost-plane__title">стандарт</div>
-              <div class="cost-plane__price"><span>от</span> 30 000 ₽</div>
-            </div>
-            <div class="cost-plane__body">
-              <p class="cost-plane__desc">
-                Для тех, кто хочет сделать сайт
-                эффективным инструментом продаж.
-              </p>
-              <ul class="cost-plane__list">
-                <li>Отчетность по трафику, запросам в ТОП</li>
-                <li>От 200 запросов</li>
-                <li>Техническая оптимизация</li>
-                <li>Работа с коммерческими факторами</li>
-                <li>Рекомендации по юзабилити</li>
-                <li>Выполнение доработок</li>
-                <li>Рекомендации для повышения эффективности</li>
-                <li>Работа по увеличению % конверсии</li>
-              </ul>
 
-              <div class="c-btn-layout c-btn-layout--left">
-                <a href="#" class="c-btn c-btn-default js-show-consultation">Получить предложение</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- END cost-item-->
-        <!-- START cost-item-->
-        <div class="cost-item">
-          <div class="cost-plane cost-plane--business">
-            <div class="cost-plane__head">
-              <div class="cost-plane__title">Бизнес</div>
-              <div class="cost-plane__price"><span>от</span> 50 000 ₽</div>
-            </div>
-            <div class="cost-plane__body">
-              <p class="cost-plane__desc">
-                Для тех, кто стремится к большему
-                и не готов на компромисы.
-              </p>
-              <ul class="cost-plane__list">
-                <li>Отчетность по лидам, трафику или запросам в ТОП</li>
-                <li>От 700 запросов</li>
-                <li>Оптимизация скорости загрузки</li>
-                <li>Работа с коммерческими факторами</li>
-                <li>Рекомендации по юзабилити</li>
-                <li>Рекомендации для повышения эффективности</li>
-                <li>Выполнение доработок</li>
-                <li>Ежеквартальный расширенный отчет по результатам</li>
-                <li>Работы по увеличению % конверсии</li>
-              </ul>
-              <div class="cost-plane-gift">
-                <div class="cost-plane-gift__icon">
-                  <span></span>
-<!--                  <svg class="icon-gift">-->
-<!--                    <use xlink:href="./src/img/main.svg#icon-gift"></use>-->
-<!--                  </svg>-->
-<!--                  <img src="./src/img/icon-gift-blue.png" alt="">-->
+        <div class="swiper-container">
+            <div class="cost-grid swiper-wrapper">
+                <!-- START cost-item-->
+              <div class="cost-item swiper-slide" id="standart">
+                <div class="cost-plane cost-plane--standart">
+                  <div class="cost-plane__head">
+                    <div class="cost-plane__title">стандарт</div>
+                    <div class="cost-plane__price"><span>от</span> 30 000 ₽</div>
+                  </div>
+                  <div class="cost-plane__body">
+                    <p class="cost-plane__desc">
+                      Для тех, кто хочет сделать сайт
+                      эффективным инструментом продаж.
+                    </p>
+                    <ul class="cost-plane__list">
+                      <li>Отчетность по трафику, запросам в ТОП</li>
+                      <li>От 200 запросов</li>
+                      <li>Техническая оптимизация</li>
+                      <li>Работа с коммерческими факторами</li>
+                      <li>Рекомендации по юзабилити</li>
+                      <li>Выполнение доработок</li>
+                      <li>Рекомендации для повышения эффективности</li>
+                      <li>Работа по увеличению % конверсии</li>
+                    </ul>
+
+                    <div class="c-btn-layout c-btn-layout--left">
+                      <a href="#" class="c-btn c-btn-default js-show-consultation">Получить предложение</a>
+                    </div>
+                  </div>
                 </div>
-                <ul class="cost-plane-gift__list">
-                  <li>Работа с репутацией (отзывы)</li>
-                  <li>Проработка карточек товаров</li>
-                </ul>
               </div>
+              <!-- END cost-item-->
+              <!-- START cost-item-->
+              <div class="cost-item swiper-slide" id="business">
+                <div class="cost-plane cost-plane--business">
+                  <div class="cost-plane__head">
+                    <div class="cost-plane__title">Бизнес</div>
+                    <div class="cost-plane__price"><span>от</span> 50 000 ₽</div>
+                  </div>
+                  <div class="cost-plane__body">
+                    <p class="cost-plane__desc">
+                      Для тех, кто стремится к большему
+                      и не готов на компромисы.
+                    </p>
+                    <ul class="cost-plane__list">
+                      <li>Отчетность по лидам, трафику или запросам в ТОП</li>
+                      <li>От 700 запросов</li>
+                      <li>Оптимизация скорости загрузки</li>
+                      <li>Работа с коммерческими факторами</li>
+                      <li>Рекомендации по юзабилити</li>
+                      <li>Рекомендации для повышения эффективности</li>
+                      <li>Выполнение доработок</li>
+                      <li>Ежеквартальный расширенный отчет по результатам</li>
+                      <li>Работы по увеличению % конверсии</li>
+                    </ul>
+                    <div class="cost-plane-gift">
+                      <div class="cost-plane-gift__icon">
+                        <span></span>
+      <!--                  <svg class="icon-gift">-->
+      <!--                    <use xlink:href="./src/img/main.svg#icon-gift"></use>-->
+      <!--                  </svg>-->
+      <!--                  <img src="./src/img/icon-gift-blue.png" alt="">-->
+                      </div>
+                      <ul class="cost-plane-gift__list">
+                        <li>Работа с репутацией (отзывы)</li>
+                        <li>Проработка карточек товаров</li>
+                      </ul>
+                    </div>
 
-              <div class="c-btn-layout c-btn-layout--left">
-                <a href="#" class="c-btn c-btn-default js-show-consultation">Получить предложение</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- END cost-item-->
-        <!-- START cost-item-->
-        <div class="cost-item">
-          <div class="cost-plane cost-plane--maximum">
-            <div class="cost-plane__head">
-              <div class="cost-plane__title">Максимум</div>
-              <div class="cost-plane__price"><span>от</span> 70 000 ₽</div>
-            </div>
-            <div class="cost-plane__body">
-              <p class="cost-plane__desc">
-                Для тех, кто хочет быть первым
-                во всем. Максимальный результат.
-              </p>
-              <ul class="cost-plane__list">
-                <li>Отчетность по лидам, трафику или запросам в ТОП</li>
-                <li>От 1500 запросов</li>
-                <li>Техническая оптимизация</li>
-                <li>Оптимизация скорости загрузки</li>
-                <li>Работа с коммерческими факторами</li>
-                <li>Рекомендации по юзабилити</li>
-                <li>Рекомендации для повышения эффективности</li>
-                <li>Выполнение доработок </li>
-                <li>Ежеквартальный расширенный отчет по результатам</li>
-                <li>Работы по увеличению % конверсии</li>
-                <li>Расширенная аналитика выполняется ведущим специалистом</li>
-              </ul>
-
-              <div class="cost-plane-gift">
-                <div class="cost-plane-gift__icon">
-                  <span></span>
-<!--                  <svg class="icon-gift">-->
-<!--                    <use xlink:href="./src/img/main.svg#icon-gift"></use>-->
-<!--                  </svg>-->
-
-<!--                  <img src="./src/img/icon-gift-pink.png" alt="">-->
+                    <div class="c-btn-layout c-btn-layout--left">
+                      <a href="#" class="c-btn c-btn-default js-show-consultation">Получить предложение</a>
+                    </div>
+                  </div>
                 </div>
-                <ul class="cost-plane-gift__list">
-                  <li>Бонус: 10ч работы разработчика</li>
-                  <li>Работа с репутацией (отзывы)</li>
-                  <li>Углубленная проработка карточек товаров </li>
-                  <li>Настройка и ведение рекламных кампаний (Яндекс + Google)</li>
-                </ul>
               </div>
+              <!-- END cost-item-->
+              <!-- START cost-item-->
+              <div class="cost-item swiper-slide" id="maximum">
+                <div class="cost-plane cost-plane--maximum">
+                  <div class="cost-plane__head">
+                    <div class="cost-plane__title">Максимум</div>
+                    <div class="cost-plane__price"><span>от</span> 70 000 ₽</div>
+                  </div>
+                  <div class="cost-plane__body">
+                    <p class="cost-plane__desc">
+                      Для тех, кто хочет быть первым
+                      во всем. Максимальный результат.
+                    </p>
+                    <ul class="cost-plane__list">
+                      <li>Отчетность по лидам, трафику или запросам в ТОП</li>
+                      <li>От 1500 запросов</li>
+                      <li>Техническая оптимизация</li>
+                      <li>Оптимизация скорости загрузки</li>
+                      <li>Работа с коммерческими факторами</li>
+                      <li>Рекомендации по юзабилити</li>
+                      <li>Рекомендации для повышения эффективности</li>
+                      <li>Выполнение доработок </li>
+                      <li>Ежеквартальный расширенный отчет по результатам</li>
+                      <li>Работы по увеличению % конверсии</li>
+                      <li>Расширенная аналитика выполняется ведущим специалистом</li>
+                    </ul>
 
-              <div class="c-btn-layout c-btn-layout--left">
-                <a href="#" class="c-btn c-btn-default js-show-consultation">Получить предложение</a>
+                    <div class="cost-plane-gift">
+                      <div class="cost-plane-gift__icon">
+                        <span></span>
+      <!--                  <svg class="icon-gift">-->
+      <!--                    <use xlink:href="./src/img/main.svg#icon-gift"></use>-->
+      <!--                  </svg>-->
+
+      <!--                  <img src="./src/img/icon-gift-pink.png" alt="">-->
+                      </div>
+                      <ul class="cost-plane-gift__list">
+                        <li>Бонус: 10ч работы разработчика</li>
+                        <li>Работа с репутацией (отзывы)</li>
+                        <li>Углубленная проработка карточек товаров </li>
+                        <li>Настройка и ведение рекламных кампаний (Яндекс + Google)</li>
+                      </ul>
+                    </div>
+
+                    <div class="c-btn-layout c-btn-layout--left">
+                      <a href="#" class="c-btn c-btn-default js-show-consultation">Получить предложение</a>
+                    </div>
+                  </div>
+                </div>
               </div>
+              <!-- END cost-item-->
             </div>
-          </div>
+
         </div>
-        <!-- END cost-item-->
+        
+        <!-- <div class="cost-navigation">
+          <a href="#standart" class="cost-navigation__link">Стандарт</a>
+          <a href="#business" class="cost-navigation__link">Бизнес</a>
+          <a href="#maximum" class="cost-navigation__link">Максимум</a>
+        </div> -->
+        
       </div>
     </div>
   </div>
