--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="banner-top__head ">
           <div class="banner-top__title a-turn a-turn-3">Эфективное продвижение интернет-магазинов</div>
           <div class="banner-top__text a-turn a-turn-3">Научим ваш сайт продавать много</div>
-          <div class="c-btn-layout c-btn-layout--left a-turn a-turn-3">
+          <div class="c-btn-layout c-btn-layout--left ">
             <a href="#" class="c-btn c-btn-big js-show-consultation c-btn--blue">получить консультацию</a>
           </div>
         </div>
@@ -156,10 +156,10 @@
                         <div class="c-schema__grid">
                           <div class="c-schema__col">
                             <div class="c-schema__data">
-                              <!--                            <div class="c-schema__res">5 258</div>-->
+                              <div class="c-schema__res c-schema__res--min">5 258</div>
                               <span style="height: 20%"></span>
                             </div>
-                            <div class="c-schema__name">Февраль</div>
+                            <div class="c-schema__name">Фев.</div>
 
                           </div>
                           <div class="c-schema__col">
@@ -168,7 +168,7 @@
                           </div>
                           <div class="c-schema__col">
                             <div class="c-schema__data"><span style="height: 40%"></span></div>
-                            <div class="c-schema__name">Апрель</div>
+                            <div class="c-schema__name">Апр.</div>
                           </div>
                           <div class="c-schema__col">
                             <div class="c-schema__data"><span style="height: 80%"></span></div>
@@ -181,7 +181,7 @@
                           <div class="c-schema__col">
                             <div class="c-schema__data"><span style="height: 55%"></span></div>
                             <div class="c-schema__name">Июль</div>
-                            <!--                          <div class="c-schema__res">10 250</div>-->
+                            <div class="c-schema__res c-schema__res--max">10 250</div>
                           </div>
                         </div>
                       </div>
@@ -212,10 +212,10 @@
                         <div class="c-schema__grid">
                           <div class="c-schema__col">
                             <div class="c-schema__data">
-                              <!--                            <div class="c-schema__res">5 258</div>-->
+                              <div class="c-schema__res c-schema__res--min">5 258</div>
                               <span style="height: 20%"></span>
                             </div>
-                            <div class="c-schema__name">Февраль</div>
+                            <div class="c-schema__name">Фев.</div>
 
                           </div>
                           <div class="c-schema__col">
@@ -224,7 +224,7 @@
                           </div>
                           <div class="c-schema__col">
                             <div class="c-schema__data"><span style="height: 40%"></span></div>
-                            <div class="c-schema__name">Апрель</div>
+                            <div class="c-schema__name">Апр.</div>
                           </div>
                           <div class="c-schema__col">
                             <div class="c-schema__data"><span style="height: 80%"></span></div>
@@ -237,7 +237,7 @@
                           <div class="c-schema__col">
                             <div class="c-schema__data"><span style="height: 55%"></span></div>
                             <div class="c-schema__name">Июль</div>
-                            <!--                          <div class="c-schema__res">10 250</div>-->
+                            <div class="c-schema__res c-schema__res--max">10 250</div>
                           </div>
                         </div>
                       </div>
@@ -268,10 +268,10 @@
                         <div class="c-schema__grid">
                           <div class="c-schema__col">
                             <div class="c-schema__data">
-                              <!--                            <div class="c-schema__res">5 258</div>-->
+                              <div class="c-schema__res c-schema__res--min">5 258</div>
                               <span style="height: 20%"></span>
                             </div>
-                            <div class="c-schema__name">Февраль</div>
+                            <div class="c-schema__name">Фев.</div>
 
                           </div>
                           <div class="c-schema__col">
@@ -280,7 +280,7 @@
                           </div>
                           <div class="c-schema__col">
                             <div class="c-schema__data"><span style="height: 40%"></span></div>
-                            <div class="c-schema__name">Апрель</div>
+                            <div class="c-schema__name">Апр.</div>
                           </div>
                           <div class="c-schema__col">
                             <div class="c-schema__data"><span style="height: 80%"></span></div>
@@ -293,7 +293,7 @@
                           <div class="c-schema__col">
                             <div class="c-schema__data"><span style="height: 55%"></span></div>
                             <div class="c-schema__name">Июль</div>
-                            <!--                          <div class="c-schema__res">10 250</div>-->
+                            <div class="c-schema__res c-schema__res--max">10 250</div>
                           </div>
                         </div>
                       </div>
@@ -324,10 +324,10 @@
                         <div class="c-schema__grid">
                           <div class="c-schema__col">
                             <div class="c-schema__data">
-                              <!--                            <div class="c-schema__res">5 258</div>-->
+                              <div class="c-schema__res c-schema__res--min">5 258</div>
                               <span style="height: 20%"></span>
                             </div>
-                            <div class="c-schema__name">Февраль</div>
+                            <div class="c-schema__name">Фев.</div>
 
                           </div>
                           <div class="c-schema__col">
@@ -336,7 +336,7 @@
                           </div>
                           <div class="c-schema__col">
                             <div class="c-schema__data"><span style="height: 40%"></span></div>
-                            <div class="c-schema__name">Апрель</div>
+                            <div class="c-schema__name">Апр.</div>
                           </div>
                           <div class="c-schema__col">
                             <div class="c-schema__data"><span style="height: 80%"></span></div>
@@ -349,7 +349,7 @@
                           <div class="c-schema__col">
                             <div class="c-schema__data"><span style="height: 55%"></span></div>
                             <div class="c-schema__name">Июль</div>
-                            <!--                          <div class="c-schema__res">10 250</div>-->
+                            <div class="c-schema__res c-schema__res--max">10 250</div>
                           </div>
                         </div>
                       </div>
@@ -380,10 +380,10 @@
                         <div class="c-schema__grid">
                           <div class="c-schema__col">
                             <div class="c-schema__data">
-                              <!--                            <div class="c-schema__res">5 258</div>-->
+                              <div class="c-schema__res c-schema__res--min">5 258</div>
                               <span style="height: 20%"></span>
                             </div>
-                            <div class="c-schema__name">Февраль</div>
+                            <div class="c-schema__name">Фев.</div>
 
                           </div>
                           <div class="c-schema__col">
@@ -392,7 +392,7 @@
                           </div>
                           <div class="c-schema__col">
                             <div class="c-schema__data"><span style="height: 40%"></span></div>
-                            <div class="c-schema__name">Апрель</div>
+                            <div class="c-schema__name">Апр.</div>
                           </div>
                           <div class="c-schema__col">
                             <div class="c-schema__data"><span style="height: 80%"></span></div>
@@ -405,7 +405,7 @@
                           <div class="c-schema__col">
                             <div class="c-schema__data"><span style="height: 55%"></span></div>
                             <div class="c-schema__name">Июль</div>
-                            <!--                          <div class="c-schema__res">10 250</div>-->
+                            <div class="c-schema__res c-schema__res--max">10 250</div>
                           </div>
                         </div>
                       </div>
@@ -436,10 +436,10 @@
                         <div class="c-schema__grid">
                           <div class="c-schema__col">
                             <div class="c-schema__data">
-                              <!--                            <div class="c-schema__res">5 258</div>-->
+                              <div class="c-schema__res c-schema__res--min">5 258</div>
                               <span style="height: 20%"></span>
                             </div>
-                            <div class="c-schema__name">Февраль</div>
+                            <div class="c-schema__name">Фев.</div>
 
                           </div>
                           <div class="c-schema__col">
@@ -448,7 +448,7 @@
                           </div>
                           <div class="c-schema__col">
                             <div class="c-schema__data"><span style="height: 40%"></span></div>
-                            <div class="c-schema__name">Апрель</div>
+                            <div class="c-schema__name">Апр.</div>
                           </div>
                           <div class="c-schema__col">
                             <div class="c-schema__data"><span style="height: 80%"></span></div>
@@ -461,7 +461,7 @@
                           <div class="c-schema__col">
                             <div class="c-schema__data"><span style="height: 55%"></span></div>
                             <div class="c-schema__name">Июль</div>
-                            <!--                          <div class="c-schema__res">10 250</div>-->
+                            <div class="c-schema__res c-schema__res--max">10 250</div>
                           </div>
                         </div>
                       </div>
@@ -492,10 +492,10 @@
                         <div class="c-schema__grid">
                           <div class="c-schema__col">
                             <div class="c-schema__data">
-                              <!--                            <div class="c-schema__res">5 258</div>-->
+                              <div class="c-schema__res c-schema__res--min">5 258</div>
                               <span style="height: 20%"></span>
                             </div>
-                            <div class="c-schema__name">Февраль</div>
+                            <div class="c-schema__name">Фев.</div>
 
                           </div>
                           <div class="c-schema__col">
@@ -504,7 +504,7 @@
                           </div>
                           <div class="c-schema__col">
                             <div class="c-schema__data"><span style="height: 40%"></span></div>
-                            <div class="c-schema__name">Апрель</div>
+                            <div class="c-schema__name">Апр.</div>
                           </div>
                           <div class="c-schema__col">
                             <div class="c-schema__data"><span style="height: 80%"></span></div>
@@ -517,7 +517,7 @@
                           <div class="c-schema__col">
                             <div class="c-schema__data"><span style="height: 55%"></span></div>
                             <div class="c-schema__name">Июль</div>
-                            <!--                          <div class="c-schema__res">10 250</div>-->
+                            <div class="c-schema__res c-schema__res--max">10 250</div>
                           </div>
                         </div>
                       </div>
@@ -548,10 +548,10 @@
                         <div class="c-schema__grid">
                           <div class="c-schema__col">
                             <div class="c-schema__data">
-                              <!--                            <div class="c-schema__res">5 258</div>-->
+                              <div class="c-schema__res c-schema__res--min">5 258</div>
                               <span style="height: 20%"></span>
                             </div>
-                            <div class="c-schema__name">Февраль</div>
+                            <div class="c-schema__name">Фев.</div>
 
                           </div>
                           <div class="c-schema__col">
@@ -560,7 +560,7 @@
                           </div>
                           <div class="c-schema__col">
                             <div class="c-schema__data"><span style="height: 40%"></span></div>
-                            <div class="c-schema__name">Апрель</div>
+                            <div class="c-schema__name">Апр.</div>
                           </div>
                           <div class="c-schema__col">
                             <div class="c-schema__data"><span style="height: 80%"></span></div>
@@ -573,7 +573,7 @@
                           <div class="c-schema__col">
                             <div class="c-schema__data"><span style="height: 55%"></span></div>
                             <div class="c-schema__name">Июль</div>
-                            <!--                          <div class="c-schema__res">10 250</div>-->
+                            <div class="c-schema__res c-schema__res--max">10 250</div>
                           </div>
                         </div>
                       </div>
@@ -945,13 +945,13 @@
             </div>
 
         </div>
-        
+
         <!-- <div class="cost-navigation">
           <a href="#standart" class="cost-navigation__link">Стандарт</a>
           <a href="#business" class="cost-navigation__link">Бизнес</a>
           <a href="#maximum" class="cost-navigation__link">Максимум</a>
         </div> -->
-        
+
       </div>
     </div>
   </div>
