--- a/index.html
+++ b/index.html
@@ -945,6 +945,7 @@
             </div>
 
         </div>
+        <div class="swiper-pagination"></div>
 
         <!-- <div class="cost-navigation">
           <a href="#standart" class="cost-navigation__link">Стандарт</a>
